[gd_scene load_steps=17 format=1]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/beefd_10_with_shadow.fnt" type="BitmapFont" id=2]
[ext_resource path="res://Scenes/cursor.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sound/sountracks/menu.ogg" type="AudioStream" id=4]
[ext_resource path="res://Scripts/start_logo_anim.gd" type="Script" id=5]
[ext_resource path="res://Fonts/beefd_5_with_shadow.fnt" type="BitmapFont" id=6]
[ext_resource path="res://Scenes/load_anim_sprite.tscn" type="PackedScene" id=7]
[ext_resource path="res://Art/BG/menu/m_bg1.png" type="Texture" id=8]
[ext_resource path="res://Art/BG/menu/m_bg2.png" type="Texture" id=9]
[ext_resource path="res://Art/BG/menu/m_bg3.png" type="Texture" id=10]
[ext_resource path="res://Art/BG/menu/m_bg4.png" type="Texture" id=11]

[sub_resource type="StyleBoxEmpty" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="Animation" id=1]

resource/name = "show"
length = 4.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( -0.1, 3.3, 3.5, 4 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ] }

[sub_resource type="Animation" id=2]

resource/name = "show_long"
length = 10.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Label:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( -0.1, 9.3, 9.5, 10 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":0, "values":[ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ] }

[sub_resource type="SpriteFrames" id=3]

animations = [ { "frames":[ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ], "loop":true, "name":"default", "speed":15.0 } ]

[node name="MainMenu" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 320.0
margin/bottom = 240.0
script/script = ExtResource( 1 )

[node name="ui" type="Control" parent="."]

visibility/visible = false
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 160.0
margin/top = 120.0
margin/right = -160.0
margin/bottom = -120.0

[node name="main" type="Control" parent="ui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 70.0
margin/right = 220.0
margin/bottom = 170.0

[node name="play" type="Button" parent="ui/main"]

anchor/top = 3
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 50.0
margin/right = 20.0
margin/bottom = 30.0
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "play"
flat = true

[node name="co-op" type="Button" parent="ui/main"]

anchor/top = 3
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 15.0
margin/top = 30.0
margin/right = 15.0
margin/bottom = 10.0
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_fonts/font = ExtResource( 2 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "co-op"
flat = true

[node name="stats" type="Button" parent="ui/main"]

anchor/top = 3
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 15.0
margin/top = 10.0
margin/right = 15.0
margin/bottom = -10.0
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_fonts/font = ExtResource( 2 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "stats"
flat = true

[node name="options" type="Button" parent="ui/main"]

anchor/top = 3
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -10.0
margin/right = 0.0
margin/bottom = -30.0
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "options"
flat = true

[node name="quit" type="Button" parent="ui/main"]

anchor/top = 3
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = -30.0
margin/right = 20.0
margin/bottom = -50.0
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "quit"
flat = true

[node name="options" type="Control" parent="ui"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 85.0
margin/top = 70.0
margin/right = 235.0
margin/bottom = 170.0

[node name="game" type="Button" parent="ui/options"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 35.0
margin/top = 0.0
margin/right = 115.0
margin/bottom = 20.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Game"
flat = true

[node name="video" type="Button" parent="ui/options"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 30.0
margin/top = 20.0
margin/right = 120.0
margin/bottom = 40.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Video"
flat = true

[node name="audio" type="Button" parent="ui/options"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 30.0
margin/top = 40.0
margin/right = 120.0
margin/bottom = 60.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Audio"
flat = true

[node name="controlls" type="Button" parent="ui/options"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 60.0
margin/right = 150.0
margin/bottom = 80.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Controlls"
flat = true

[node name="go_menu" type="Button" parent="ui/options"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 35.0
margin/top = 80.0
margin/right = 115.0
margin/bottom = 100.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = true

[node name="cursor" parent="." instance=ExtResource( 3 )]

z/z = 999

[node name="view" type="Viewport" parent="."]

rect = Rect2( 0, 0, 320, 240 )
own_world = false
world = null
transparent_bg = false
render_target/enabled = true
render_target/v_flip = false
render_target/clear_on_new_frame = true
render_target/filter = false
render_target/gen_mipmaps = false
render_target/update_mode = 2
audio_listener/enable_2d = false
audio_listener/enable_3d = false
physics/object_picking = false
gui/disable_input = false

[node name="bg_sound" type="StreamPlayer" parent="view"]

stream/stream = ExtResource( 4 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="start" type="Control" parent="view"]

editor/display_folded = true
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 320.0
margin/bottom = 240.0
script/script = ExtResource( 5 )

[node name="start_anim" type="AnimationPlayer" parent="view/start"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/show = SubResource( 1 )
anims/show_long = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Label" type="Label" parent="view/start"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -30.0
margin/top = -20.0
margin/right = -290.0
margin/bottom = -220.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "test text"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="load_anim_sprite" parent="view/start" instance=ExtResource( 7 )]

visibility/visible = false
margin/left = 0.0
margin/top = 0.0
margin/right = -320.0
margin/bottom = -240.0

[node name="menu" type="Control" parent="view"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 320.0
margin/bottom = 240.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="view/menu"]

frames = SubResource( 3 )
animation = "default"
frame = 1
playing = true
centered = false

[connection signal="pressed" from="ui/main/play" to="." method="_on_play_pressed"]

[connection signal="pressed" from="ui/main/options" to="." method="_on_options_pressed"]

[connection signal="pressed" from="ui/main/quit" to="." method="_on_quit_pressed"]

[connection signal="pressed" from="ui/options/go_menu" to="." method="_on_go_menu_pressed" binds= [ "options" ]]

[connection signal="finished" from="view/start/start_anim" to="view/start" method="_on_start_anim_finished"]


